--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "type": "module",
   "scripts": {
     "start": "node src/app.js",
-    "dev": "nodemon src/app.js"
+    "dev": "nodemon src/app.js",
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "lint": "eslint ."
   },
   "keywords": [
     "fitness",
@@ -32,6 +35,9 @@
     "sequelize": "^6.37.7"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "@vitest/coverage-v8": "^2.1.0",
+    "eslint": "^8.57.0",
+    "nodemon": "^3.1.0",
+    "vitest": "^2.1.0"
   }
 }
